Add the Draper decorator to decorate Game

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -13,5 +13,6 @@
           .extra
             %i.users.icon
             %span #{game.players_min} - #{game.players_max}
-            %i.time.icon
-            %span #{game.playing_time_min} - #{game.playing_time_max}
+            %span.right.floated
+              %i.time.icon
+              %span #{game.playing_time} min
