--- a/app/assets/stylesheets/global_settings.css.scss
+++ b/app/assets/stylesheets/global_settings.css.scss
@@ -1,3 +1,9 @@
+// background
+body {
+  background-image: url(image_path('rockywall.png'));
+}
+
+// font
 body {
   font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
 }
