--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,5 +1,7 @@
 .column
-  %h1 Board Games
+  %h1.ui.black.block.header
+    Board Games
+    .sub.header Search the best games by number of players or playing time.
 
 .column
   .ui.three.items
