Change the users icon on the user icon

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -7,7 +7,7 @@
         .name= game.name
         .description= game.description
         .extra
-          %i.users.icon
+          %i.user.icon
           %span #{game.players_min} - #{game.players_max}
           %span.right.floated
             %i.time.icon
