--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -1,6 +1,6 @@
 .ui.three.items
   - @games.each do |game|
-    .item
+    = link_to game, class: "item" do
       .image
         = image_tag game.image_url(:thumb), alt: game.name
       .content
@@ -8,7 +8,7 @@
         .description= game.description
         .extra
           %i.user.icon
-          %span #{game.players_min} - #{game.players_max}
+          %span= game.number_of_players
           %span.right.floated
             %i.time.icon
-            %span #{game.playing_time} min
+            %span= game.playing_time
