--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,3 +1,4 @@
-%h1.ui.black.block.header
-  Board Games
-  .sub.header Search the best games by number of players or playing time.
+= link_to root_path do
+  %h1.ui.black.block.header
+    Board Games
+    .sub.header Search the best games by number of players or playing time.
