--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -1,14 +1,18 @@
-.ui.three.items
-  - @games.each do |game|
-    = link_to game, class: "item" do
-      .image
-        = image_tag game.image_url(:thumb), alt: game.name
-      .content
-        .name= game.name
-        .description= game.description
-        .extra
-          %i.user.icon
-          %span= game.number_of_players
-          %span.right.floated
-            %i.time.icon
-            %span= game.playing_time
+.column
+  .ui.three.items
+    - @games.each do |game|
+      = link_to game, class: "item" do
+        .image
+          = image_tag game.image_url(:thumb), alt: game.name
+        .content
+          .name= game.name
+          .description= game.description
+          .extra
+            %i.user.icon
+            %span= game.number_of_players
+            %span.right.floated
+              %i.time.icon
+              %span= game.playing_time
+
+.center.aligned.column
+  = paginate @games
