--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,16 +1,17 @@
-.ui.inverted.teal.block.header= @game.name
+.column
+  .ui.inverted.teal.block.header= @game.name
 
-= image_tag @game.image, alt: @game.name, class: 'ui right floated large image'
-%p= @game.description
+  = image_tag @game.image, alt: @game.name, class: 'ui right floated large image'
+  %p= @game.description
 
-%table#game-info.ui.compact.collapsing.basic.definition.table.segment
-  %tbody
-    %tr
-      %td Number of Players
-      %td= @game.number_of_players
-    %tr
-      %td Playing time
-      %td= @game.playing_time
-    %tr
-      %td Website
-      %td= @game.website_link
+  %table#game-info.ui.compact.collapsing.basic.definition.table.segment
+    %tbody
+      %tr
+        %td Number of Players
+        %td= @game.number_of_players
+      %tr
+        %td Playing time
+        %td= @game.playing_time
+      %tr
+        %td Website
+        %td= @game.website_link
