Show  'Age' and 'Year Published' for the game

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -13,5 +13,11 @@
         %td Playing time
         %td= @game.playing_time
       %tr
+        %td Age
+        %td= @game.suggested_age
+      %tr
+        %td Year Published
+        %td= @game.year_published
+      %tr
         %td Website
         %td= @game.website_link
