--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -1,18 +1,6 @@
 .column
   .ui.three.items
-    - @games.each do |game|
-      = link_to game, class: "item" do
-        .image
-          = image_tag game.image_url(:thumb), alt: game.name
-        .content
-          .name= game.name
-          .description= game.description
-          .extra
-            %i.user.icon
-            %span= game.number_of_players
-            %span.right.floated
-              %i.time.icon
-              %span= game.playing_time
+    = render @games
 
 .center.aligned.column
   = paginate @games
