--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -1,6 +1,6 @@
-.column
+.sixteen.wide.column
   .ui.three.items
     = render @games
 
-.center.aligned.column
+.sixteen.wide.center.aligned.column
   = paginate @games
