--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,9 +2,8 @@
 %html
   %head
     %title BoardGames
-    = stylesheet_link_tag    'http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Open+Sans:300italic,400,300,700'
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = render 'shared/assets'
+
     = csrf_meta_tags
   %body
     .ui.one.column.page.grid
