--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -6,12 +6,7 @@
   = render 'game_info_table'
 
 .eight.wide.center.aligned.column
-  = link_to @game.image_url, rel: @game.name, class: "fancybox" do
-    = image_tag @game.image, alt: @game.name, class: 'ui inline-block image'
-  .hidden
-    - @game.pictures.each do |picture|
-      = link_to picture.image_url, rel: @game.name, class: "fancybox" do
-        = image_tag picture.image_url(:thumb), alt: @game.name, class: "ui small image"
+  = render 'game_gallery', game: @game
 
 :coffee
   $(".fancybox").fancybox()
