Change type of the published_at game field to integer

--- a/app/views/games/_game_info_table.html.haml
+++ b/app/views/games/_game_info_table.html.haml
@@ -11,7 +11,7 @@
       %td= @game.suggested_age
     %tr
       %td Year Published
-      %td= @game.year_published
+      %td= @game.published_at
     %tr
       %td Website
       %td= @game.website_link
