Add links to Wikipedia and BGG to the game info table

--- a/app/views/games/_game_info_table.html.haml
+++ b/app/views/games/_game_info_table.html.haml
@@ -15,3 +15,9 @@
     %tr
       %td Website
       %td= @game.website_link
+    %tr
+      %td Wikipedia
+      %td= @game.wikipedia_link
+    %tr
+      %td Board Game Geek
+      %td= @game.bgg_link
