--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -4,6 +4,7 @@
 .eight.wide.column
   %p= @game.description
   = render 'game_info_table'
+  = render 'buy_button', url: @game.chuvachi_link
 
 .eight.wide.center.aligned.column
   = render 'game_gallery', game: @game
