Add displaying a disabled buy button when the game is not available

--- a/app/views/games/_buy_button.html.haml
+++ b/app/views/games/_buy_button.html.haml
@@ -1,4 +1,3 @@
-- if url
-  = link_to url, target: "_blank", class: "ui primary large labeled icon button" do
-    %i.cart.icon
-    Buy
+%a.ui.primary.large.labeled.icon.button{href: url, target: "_blank", class: ("disabled" unless url )}
+  %i.cart.icon
+  Buy
