--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,9 +1,11 @@
-.ui.divider
-.ui.horizontal.bulleted.list
-  .item
-    Created by
-    = link_to('Kostya Dubinin', 'http://github.com/kostyadubinin', target: '_blank')
-  .item
-    Contribute on
-    = link_to('GitHub', 'http://github.com/kostyadubinin/board_games', target: '_blank')
-  .item 2014
+.ui.page.grid
+  .center.aligned.column
+    .ui.divider
+    .ui.horizontal.bulleted.list
+      .item
+        Created by
+        = link_to('Kostya Dubinin', 'http://github.com/kostyadubinin', target: '_blank')
+      .item
+        Contribute on
+        = link_to('GitHub', 'http://github.com/kostyadubinin/board_games', target: '_blank')
+      .item 2014
