--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,4 +1,6 @@
-= link_to root_path do
-  %h1.ui.black.block.header
-    Board Games
-    .sub.header Search the best games by number of players or playing time.
+.ui.page.grid
+  .column
+    = link_to root_path do
+      %h1.ui.black.block.header
+        Board Games
+        .sub.header Search the best games by number of players or playing time.
